deploy/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: asphelloworld-deployment
  labels:
    app: asphelloworld
spec:
  replicas: 1
  selector:
    matchLabels:
      app: asphelloworld
  template:
    metadata:
      labels:
        app: asphelloworld
    spec:
      containers:
        - name: asphelloworld
          image: fkrutakov/asphelloworld
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: asphelloworld-service
spec:
  selector:
    app: asphelloworld
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
