deploy/app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: aspnethelloworld-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: asphelloworld-service
              servicePort: 8080
